# dragonfly

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  example.fly  tarpaulin-report.html
ast/: Cargo.toml
ast/src/: enum.rs  lib.rs  model.rs  query.rs  type.rs
cli/: Cargo.toml
cli/src/: command.rs  io.rs  lib.rs
graphql/: Cargo.toml
graphql/src/: argument.rs  const_argument.rs  const_directive.rs  directive.rs  enum.rs  field.rs  fragment_spread.rs  inline_fragment.rs  lib.rs  query.rs  selection.rs  type.rs  value.rs
ir/: Cargo.toml
ir/src/: cardinality.rs  enum.rs  lib.rs  model.rs  query.rs  type.rs  type_error.rs
ord-str-map/: Cargo.toml
ord-str-map/src/: lib.rs
parser/: Cargo.toml
parser/src/: capitalization.rs  case.rs  char.rs  char_predicate.rs  lib.rs  parse_error.rs
print/: Cargo.toml
print/src/: lib.rs
printer/: Cargo.toml
printer/src/: lib.rs
prisma/: Cargo.toml
prisma/src/: argument.rs  attribute.rs  data_source.rs  enum.rs  generator.rs  lib.rs  model.rs  schema_error.rs  value.rs
src/: lib.rs
src/ast/: README.md  component.rs  enum.rs  mod.rs  query.rs  route.rs  type.rs  type_error.rs
src/cli/: command.rs  error.rs  io.rs  mod.rs
src/generator/: README.md  mod.rs
src/ir/: cardinality.rs  component.rs  enum.rs  mod.rs  route.rs  type.rs
src/parser/: case.rs  char.rs  char_predicate.rs  char_range.rs  macro.rs  mod.rs  parse_error.rs
token-set/: Cargo.toml
token-set/src/: lib.rs
typescript/: Cargo.toml
typescript/src/: expression_with_type_arguments.rs  import.rs  interface.rs  lib.rs  (+4 more)
(+125 files in other folders)
