[package]
authors = ["Bas Dirks"]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dragonfly"
path = "src/bin/dragonfly.rs"

[lib]
name = "dragonfly"
path = "src/lib.rs"

[dependencies]
